# lazy-desktop-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/ISSUE_TEMPLATE/: config.yml
config/: client-config.json  policy.dev.json  policy.example.json
crates/desktop-core/: Cargo.toml
crates/desktop-core/src/: lib.rs
crates/desktop-core/tests/: audit_hash.rs  policy_engine.rs  presence_store.rs
crates/desktop-host/: Cargo.toml
crates/desktop-host/src/: lib.rs  main.rs  presence_ui.rs
crates/desktop-host/tests/: service.rs
crates/desktop-mcp/: Cargo.toml
crates/desktop-mcp/src/: main.rs
crates/desktop-mcp/tests/: stdio.rs
docs/: FOR_USERS.md  desktop-app-development.md  presence-ui.md  publishing.md  security-model.md
lib/: config-sync.mjs  release-flow.mjs  runtime.mjs
scripts/: build-native.mjs  install-presence-ui.sh  postinstall.mjs  release-notes.mjs  release-prep.mjs  security-check.mjs  sync-client-config.mjs
test/: config-sync.test.mjs  release-flow.test.mjs  runtime.test.mjs
