[package]
name = "desktop-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "desktop_host"
path = "src/lib.rs"

[[bin]]
name = "desktop-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
desktop-core = { path = "../desktop-core" }
directories.workspace = true
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true
