[package]
name = "desktop-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "desktop-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
desktop-core = { path = "../desktop-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
